--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/lodash": "^4.14.202",
     "ag-grid-angular": "^31.0.3",
     "lodash": "^4.17.21",
+    "regex": "^0.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
